results/SVCOMP/specgen/log-enum1-2024_02_25_15_06_31.txt
enum enum1 {
  VAL1,
  VAL2,
  VAL3,
  VAL4,
  VAL5;

  //@ ensures (\forall enum1 e; e == VAL1 || e == VAL2 || e == VAL3 || e == VAL4 || e == VAL5; System.out.println(e));
  static {
    for (enum1 e : enum1.values()) {
      System.out.println(e);
    }
  }
}

class Main {
  //@ requires args != null;
  public static void main(String[] args) {
    enum1 e = enum1.VAL5;
    //@ assert e == enum1.VAL5;
    assert (e == enum1.VAL5);
  }
}
/home/max/Documents/JMLGPT/tmp/enum1.java:8: error: incompatible types: void cannot be converted to boolean
  //@ ensures (\forall enum1 e; e == VAL1 || e == VAL2 || e == VAL3 || e == VAL4 || e == VAL5; System.out.println(e));
                                                                                                                 ^
1 error

enum enum1 {
  VAL1,
  VAL2,
  VAL3,
  VAL4,
  VAL5;

  //@ ensures (\forall enum1 e; e == VAL1 || e == VAL2 || e == VAL3 || e == VAL4 || e == VAL5; true);
  static {
    for (enum1 e : enum1.values()) {
      System.out.println(e);
    }
  }
}

class Main {
  //@ requires args != null;
  public static void main(String[] args) {
    enum1 e = enum1.VAL5;
    //@ assert e == enum1.VAL5;
    assert (e == enum1.VAL5);
  }
}

